# rust-blog

./: .env  .gitignore  Cargo.toml  docker-compose.yml
src/: main.rs  models.rs
templates/: index.html  post.html
